# UNIR-Fraude-Triaje-3007G

./: .gitignore  AnalizarDataSetSintetico.ipynb  Fraude_Detection_API.postman_collection.json  GenerandoDatasetSinteticoV1.ipynb  MVP_Triaje_Fraude.ipynb  README.md  Sistema_Triaje_Inteligente_Reclamaciones_Automovil.ipynb  api_server.py  check_project.py  config.py  dataset_reclamos_ia_ruidoso_extremo-v1.xlsx  dataset_reclamos_ia_ruidoso_extremo.xlsx  main.py  mlflow.db  pyproject.toml  requirements.txt  test_api.py
docs/: CHANGES.md  QUICKSTART.md
ml/: train.py
ml/artifacts/: meta_nn.keras  nn_text_model.keras
ml/notebooks/: 01_GenerarDataset.ipynb  02_AnalizarDataset.ipynb  03_ModeloHibrido.ipynb
notebooks/: AnalizarDataSetSintetico.ipynb  Sistema_Triaje_Inteligente_Reclamaciones_Automovil.ipynb  label_encoders.pkl  meta_nn_model.keras  nn_text_model.keras  scaler.pkl
notebooks/models/: X_tab_features.pkl  meta_nn_model.keras  nn_text_model.keras  xgb_model.json
scripts/: regenerate_models.py  regenerate_models_simple.py
